--- a/[009] cursor kit/cursor special kit/style.css
+++ b/[009] cursor kit/cursor special kit/style.css
@@ -3,10 +3,13 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-* {
-  pointer-events: none;
+html, * {
+  pointer-events:painted;
   cursor: none;
 }
 
@@ -34,6 +37,10 @@ body {
   -ms-transition: 0.1s;
   -o-transition: 0.1s;
   border: 2px solid black;
+}
+.cursor.active-cursor {
+  height: 70px;
+  width: 70px;
 }
 
 .cursor2 {
@@ -143,3 +150,15 @@ body {
   content: "";
   background-color: rgba(255, 255, 255, 0);
 } */
+
+button {
+  background-color: orangered;
+  border: none;
+  padding: 20px 30px;
+  color: white;
+  font-size: 20px;
+
+}
+button:hover {
+  background-color: red;
+}
