--- a/[011] cursor kit/testDONTCOPY.css
+++ b/[011] cursor kit/testDONTCOPY.css
@@ -7,7 +7,16 @@ body {
   justify-content: center;
   align-items: center;
 }
-
+h1 {
+  display: none;
+  font-size: 30px;
+  text-align: center;
+}
+@media (max-width: 700px) {
+  h1 {
+    display: inline;
+  }
+}
 main {
   display: flex;
   flex-direction: column;
