--- a/[019] form validation/style.css
+++ b/[019] form validation/style.css
@@ -25,6 +25,7 @@ body {
   background-color: rgb(41, 57, 194);
   border: none;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .input-control {
@@ -40,6 +41,7 @@ body {
   padding: 10px;
   width: 100%;
   background-color: #e6f4ff;
+  margin-bottom: 2px;
 }
 
 .input-control input:focus {
@@ -47,15 +49,21 @@ body {
 }
 
 .input-control.success input {
-  border-color: #09c372;
+  border-color: hsla(154, 91%, 40%, 0.7);
 }
 
 .input-control.error input {
-  border-color: #ff3860;
+  border-color: hsl(348, 100%, 61%, 0.7);
 }
 
-.input-control .error {
-  color: #ff3860;
+/* styling the messages */
+.input-control .message {
+  height: 9px;
   font-size: 9px;
-  height: 13px;
+}
+.input-control .error-text {
+  color: #ff3860;
+}
+.input-control .success-text {
+  color: #09c372;
 }
