add cursor text effects

--- a/[011] cursor kit/testDONTCOPY.css
+++ b/[011] cursor kit/testDONTCOPY.css
@@ -22,7 +22,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 1rem;
 }
 button {
   background-color: orangered;
@@ -49,4 +49,11 @@ a:hover {
 }
 a:active {
   color: red;
+}
+h1,h2,h3,h4,h5,h6,p {
+  background-color: red;
+  color: white;
+  padding: 10px;
+  margin: 0;
+  width: 100%;
 }
